<resources>
    <string name="app_name">DigitalflakeDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_date_slot"><![CDATA[Select Date & Slot]]></string>
    <string name="meeting_n_room">Meeting \n Room</string>
    <string name="book_work_nstation">Book Work \nstation</string>
    <string name="co_working">Co-working</string>
    <string name="booking_history">Booking History</string>
    <string name="mobile_number_or_email">Mobile number or Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="log_in">Log In</string>
    <string name="existing_user">Existing user?</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="date">date</string>
    <string name="month">month</string>
    <string name="day_of_week">Day Of Week</string>
    <string name="confirm_booking">Confirm Booking</string>
</resources>