<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dayOfWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="4dp"
            android:text="@string/day_of_week"
            android:textColor="#000000"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/dateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="4dp"
            android:text="@string/date"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/monthTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="4dp"
            android:text="@string/month"
            android:textColor="#000000"
            android:textSize="15sp" />

        <!-- Add other views as needed -->

        <TextView
            android:id="@+id/calendarText"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </LinearLayout>
</layout>