<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:id="@+id/bookingContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.HomeFragment">

        <LinearLayout
            android:id="@+id/llBooking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="41dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo_icon">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:gravity="center"
                    android:text="@string/co_working"
                    android:textColor="@color/black"
                    android:textSize="15sp">

                </TextView>

                <Button
                    android:id="@+id/btnBookinHistory"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="90dp"
                    android:singleLine="true"
                    android:text="@string/booking_history"
                    android:textAllCaps="false">

                </Button>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"

                android:weightSum="2">

                <ImageView
                    android:id="@+id/ivBookWorkStation"
                    android:layout_width="58dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/book_work_station">

                </ImageView>


                <ImageView
                    android:layout_width="58dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/meeting_room">

                </ImageView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"

                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/book_work_nstation"
                    android:textColor="@color/black"
                    android:textSize="15sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/meeting_n_room"
                    android:textColor="@color/black"
                    android:textSize="15sp">

                </TextView>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</layout>