<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:id="@+id/flLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.SignUpFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TODO: Update blank fragment layout -->
            <LinearLayout
                android:id="@+id/llSignUP"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/poppins"
                    android:text="Create An Account"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:text="@string/full_name"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_backgrund">

                        <EditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:background="@android:color/transparent">

                        </EditText>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/mobile_number"

                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_backgrund">

                        <EditText
                            android:id="@+id/etMobileNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:background="@android:color/transparent"
                            android:inputType="number">

                        </EditText>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/email_id"

                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="54dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_backgrund">

                        <EditText
                            android:id="@+id/etEmailId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:background="@android:color/transparent">

                        </EditText>
                    </LinearLayout>


                </LinearLayout>
                <!--            <LinearLayout-->
                <!--                android:layout_width="match_parent"-->
                <!--                android:layout_height="wrap_content"-->
                <!--                android:layout_marginTop="10dp"-->
                <!--                android:orientation="vertical">-->

                <!--                <TextView-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_marginTop="10dp"-->
                <!--                    android:fontFamily="@font/poppins"-->
                <!--                    android:text="Password"-->

                <!--                    android:textColor="@color/black" />-->

                <!--                <LinearLayout-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="54dp"-->
                <!--                    android:layout_marginTop="5dp"-->
                <!--                    android:background="@drawable/edit_backgrund">-->

                <!--                    <EditText-->
                <!--                        android:id="@+id/etPassword"-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:layout_marginTop="15dp"-->
                <!--                        android:background="@android:color/transparent">-->

                <!--                    </EditText>-->
                <!--                </LinearLayout>-->


                <!--            </LinearLayout>-->

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="150dp"
                    android:background="@drawable/edit_backgrund"
                    android:backgroundTint="#5167EB"
                    android:text="Create an account"
                    android:textAllCaps="false"
                    android:textSize="15sp">

                </Button>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/existing_user">

                    </TextView>

                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/log_in"
                        android:textColor="@color/purple_500">

                    </TextView>

                </LinearLayout>


            </LinearLayout>

        </ScrollView>
    </FrameLayout>
</layout>