<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <FrameLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

        <!-- TODO: Update blank fragment layout -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- TODO: Update blank fragment layout -->

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"

                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="132dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logo_icon" />

                <TextView
                    android:id="@+id/output"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="Co-Working"
                    android:textColor="@color/black"

                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"

                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"

                        android:text="@string/mobile_number_or_email"

                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_backgrund">

                        <EditText
                            android:id="@+id/edtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:background="@android:color/transparent">

                        </EditText>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/password"

                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edit_backgrund">


                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="305dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="15dp"
                            android:background="@android:color/transparent"

                            android:inputType="textPassword">

                        </EditText>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginRight="10dp"
                            app:passwordToggleEnabled="true">

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>


                </LinearLayout>


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/edit_backgrund"
                    android:backgroundTint="#5167EB"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="15sp">

                </Button>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="New user?">

                    </TextView>

                    <TextView
                        android:id="@+id/tvCreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/create_an_account"
                        android:textColor="@color/purple_500">

                    </TextView>

                </LinearLayout>

                <!--            <View-->
                <!--                android:layout_width="45dp"-->
                <!--                android:layout_height="1dp"-->
                <!--                android:layout_gravity="center"-->
                <!--                android:layout_marginLeft="50dp"-->
                <!--                android:background="@color/purple_500">-->

                <!--            </View>-->

            </LinearLayout>

        </ScrollView>

    </FrameLayout>
</layout>